# social-rs

./: Cargo.toml  README.md  build.rs  social.proto
client/: README.md  main.rs
src/: main.rs
src/abi/: content.rs  mod.rs  post.rs  service.rs  user.rs
src/pb/: social.rs
